bindings/rust/wasmedge-sys/docs/wasmedge.rs

extern "C" {
    #[doc = " Set the instruction counting supporting boolean value of AOT compiler."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_ConfigureContext to set the boolean value."]
    #[doc = " \\param IsCount the boolean value to determine to support instruction"]
    #[doc = " counting when execution or not after compilation by the AOT compiler."]
    pub fn WasmEdge_ConfigureCompilerSetInstructionCounting(
        Cxt: *mut WasmEdge_ConfigureContext,
        IsCount: bool,
    );
}
extern "C" {
    #[doc = " Get the instruction counting supporting boolean value of AOT compiler."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_ConfigureContext to get the boolean value."]
    #[doc = ""]
    #[doc = " \\returns the boolean value to determine to support instruction counting when"]
    #[doc = " execution or not after compilation by the AOT compiler."]
    pub fn WasmEdge_ConfigureCompilerIsInstructionCounting(
        Cxt: *const WasmEdge_ConfigureContext,
    ) -> bool;
}
extern "C" {
    #[doc = " Set the cost measuring supporting boolean value of AOT compiler."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_ConfigureContext to set the boolean value."]
    #[doc = " \\param IsMeasure the boolean value to determine to support cost measuring"]
    #[doc = " when execution or not after compilation by the AOT compiler."]
    pub fn WasmEdge_ConfigureCompilerSetCostMeasuring(
        Cxt: *mut WasmEdge_ConfigureContext,
        IsMeasure: bool,
    );
}
extern "C" {
    #[doc = " Get the cost measuring supporting boolean value of AOT compiler."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_ConfigureContext to get the boolean value."]
    #[doc = ""]
    #[doc = " \\returns the boolean value to determine to support cost measuring when"]
    #[doc = " execution or not after compilation by the AOT compiler."]
    pub fn WasmEdge_ConfigureCompilerIsCostMeasuring(Cxt: *const WasmEdge_ConfigureContext)
        -> bool;
}
extern "C" {
    #[doc = " Deletion of the WasmEdge_ConfigureContext."]
    #[doc = ""]
    #[doc = " After calling this function, the context will be freed and should __NOT__ be"]
    #[doc = " used."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_ConfigureContext to delete."]
    pub fn WasmEdge_ConfigureDelete(Cxt: *mut WasmEdge_ConfigureContext);
}
extern "C" {
    #[doc = " Creation of the WasmEdge_StatisticsContext."]
    #[doc = ""]
    #[doc = " The caller owns the object and should call `WasmEdge_StatisticsDelete` to"]
    #[doc = " free it."]
    #[doc = ""]
    #[doc = " \\returns pointer to context, NULL if failed."]
    pub fn WasmEdge_StatisticsCreate() -> *mut WasmEdge_StatisticsContext;
}
extern "C" {
    #[doc = " Get the instruction count in execution."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_StatisticsContext to get data."]
    #[doc = ""]
    #[doc = " \\returns the instruction count in total execution."]
    pub fn WasmEdge_StatisticsGetInstrCount(Cxt: *const WasmEdge_StatisticsContext) -> u64;
}
extern "C" {
    #[doc = " Get the instruction count per second in execution."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_StatisticsContext to get data."]
    #[doc = ""]
    #[doc = " \\returns the instruction count per second."]
    pub fn WasmEdge_StatisticsGetInstrPerSecond(Cxt: *const WasmEdge_StatisticsContext) -> f64;
}
extern "C" {
    #[doc = " Get the total cost in execution."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_StatisticsContext to get data."]
    #[doc = ""]
    #[doc = " \\returns the total cost."]
    pub fn WasmEdge_StatisticsGetTotalCost(Cxt: *const WasmEdge_StatisticsContext) -> u64;
}
extern "C" {
    #[doc = " Set the costs of instructions."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_StatisticsContext to set the cost table."]
    #[doc = " \\param CostArr the cost table array."]
    #[doc = " \\param Len the length of the cost table array."]
    pub fn WasmEdge_StatisticsSetCostTable(
        Cxt: *mut WasmEdge_StatisticsContext,
        CostArr: *mut u64,
        Len: u32,
    );
}
extern "C" {
    #[doc = " Set the cost limit in execution."]
    #[doc = ""]
    #[doc = " The WASM execution will be aborted if the instruction costs exceeded the"]
    #[doc = " limit and the ErrCode::CostLimitExceeded will be returned."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_StatisticsContext to set the cost table."]
    #[doc = " \\param Limit the cost limit."]
    pub fn WasmEdge_StatisticsSetCostLimit(Cxt: *mut WasmEdge_StatisticsContext, Limit: u64);
}
extern "C" {
    #[doc = " Deletion of the WasmEdge_StatisticsContext."]
    #[doc = ""]
    #[doc = " After calling this function, the context will be freed and should __NOT__ be"]
    #[doc = " used."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_StatisticsContext to delete."]
    pub fn WasmEdge_StatisticsDelete(Cxt: *mut WasmEdge_StatisticsContext);
}
extern "C" {
    #[doc = " Deletion of the WasmEdge_ASTModuleContext."]
    #[doc = ""]
    #[doc = " After calling this function, the context will be freed and should __NOT__ be"]
    #[doc = " used."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_ASTModuleContext to delete."]
    pub fn WasmEdge_ASTModuleDelete(Cxt: *mut WasmEdge_ASTModuleContext);
}
extern "C" {
    #[doc = " Creation of the WasmEdge_CompilerContext."]
    #[doc = ""]
    #[doc = " The caller owns the object and should call `WasmEdge_CompilerDelete` to free"]
    #[doc = " it."]
    #[doc = ""]
    #[doc = " \\returns pointer to context, NULL if failed."]
    pub fn WasmEdge_CompilerCreate(
        ConfCxt: *const WasmEdge_ConfigureContext,
    ) -> *mut WasmEdge_CompilerContext;
}
extern "C" {
    #[doc = " Creation of the WasmEdge_CompilerContext."]
    #[doc = ""]
    #[doc = " The caller owns the object and should call `WasmEdge_CompilerDelete` to free"]
    #[doc = " it."]
    #[doc = ""]
    #[doc = " \\returns pointer to context, NULL if failed."]
    pub fn WasmEdge_CompilerCompile(
        Cxt: *mut WasmEdge_CompilerContext,
        InPath: *const ::std::os::raw::c_char,
        OutPath: *const ::std::os::raw::c_char,
    ) -> WasmEdge_Result;
}
extern "C" {
    #[doc = " Deletion of the WasmEdge_CompilerContext."]
    #[doc = ""]
    #[doc = " After calling this function, the context will be freed and should"]
    #[doc = " __NOT__ be used."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_CompilerContext to delete."]
    pub fn WasmEdge_CompilerDelete(Cxt: *mut WasmEdge_CompilerContext);
}
extern "C" {
    #[doc = " Creation of the WasmEdge_LoaderContext."]
    #[doc = ""]
    #[doc = " The caller owns the object and should call `WasmEdge_LoaderDelete` to free"]
    #[doc = " it."]
    #[doc = ""]
    #[doc = " \\param ConfCxt the WasmEdge_ConfigureContext as the configuration of Loader."]
    #[doc = " NULL for the default configuration."]
    #[doc = ""]
    #[doc = " \\returns pointer to context, NULL if failed."]
    pub fn WasmEdge_LoaderCreate(
        ConfCxt: *const WasmEdge_ConfigureContext,
    ) -> *mut WasmEdge_LoaderContext;
}
extern "C" {
    #[doc = " Load and parse the WASM module from a WASM file into a"]
    #[doc = " WasmEdge_ASTModuleContext."]
    #[doc = ""]
    #[doc = " Load and parse the WASM module from the file path, and return a"]
    #[doc = " `WasmEdge_ASTModuleContext` as result. The caller owns the"]
    #[doc = " `WasmEdge_ASTModuleContext` object and should call"]
    #[doc = " `WasmEdge_ASTModuleDelete` to free it."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_LoaderContext."]
    #[doc = " \\param [out] Module the output WasmEdge_ASTModuleContext if succeeded."]
    #[doc = " \\param Path the NULL-terminated C string of the WASM file path."]
    #[doc = ""]
    #[doc = " \\returns WasmEdge_Result. Call `WasmEdge_ResultGetMessage` for the error"]
    #[doc = " message."]
    pub fn WasmEdge_LoaderParseFromFile(
        Cxt: *mut WasmEdge_LoaderContext,
        Module: *mut *mut WasmEdge_ASTModuleContext,
        Path: *const ::std::os::raw::c_char,
    ) -> WasmEdge_Result;
}
extern "C" {
    #[doc = " Load and parse the WASM module from a buffer into WasmEdge_ASTModuleContext."]
    #[doc = ""]
    #[doc = " Load and parse the WASM module from a buffer, and return a"]
    #[doc = " WasmEdge_ASTModuleContext as result. The caller owns the"]
    #[doc = " WasmEdge_ASTModuleContext object and should call `WasmEdge_ASTModuleDelete`"]
    #[doc = " to free it."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_LoaderContext."]
    #[doc = " \\param [out] Module the output WasmEdge_ASTModuleContext if succeeded."]
    #[doc = " \\param Buf the buffer of WASM binary."]
    #[doc = " \\param BufLen the length of the buffer."]
    #[doc = ""]
    #[doc = " \\returns WasmEdge_Result. Call `WasmEdge_ResultGetMessage` for the error"]
    #[doc = " message."]
    pub fn WasmEdge_LoaderParseFromBuffer(
        Cxt: *mut WasmEdge_LoaderContext,
        Module: *mut *mut WasmEdge_ASTModuleContext,
        Buf: *const u8,
        BufLen: u32,
    ) -> WasmEdge_Result;
}
extern "C" {
    #[doc = " Deletion of the WasmEdge_LoaderContext."]
    #[doc = ""]
    #[doc = " After calling this function, the context will be freed and should __NOT__ be"]
    #[doc = " used."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_LoaderContext to delete."]
    pub fn WasmEdge_LoaderDelete(Cxt: *mut WasmEdge_LoaderContext);
}
extern "C" {
    #[doc = " Creation of the WasmEdge_ValidatorContext."]
    #[doc = ""]
    #[doc = " The caller owns the object and should call `WasmEdge_ValidatorDelete` to"]
    #[doc = " free it."]
    #[doc = ""]
    #[doc = " \\param ConfCxt the WasmEdge_ConfigureContext as the configuration of"]
    #[doc = " Validator. NULL for the default configuration."]
    #[doc = ""]
    #[doc = " \\returns pointer to context, NULL if failed."]
    pub fn WasmEdge_ValidatorCreate(
        ConfCxt: *const WasmEdge_ConfigureContext,
    ) -> *mut WasmEdge_ValidatorContext;
}
extern "C" {
    #[doc = " Validate the WasmEdge AST Module."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_ValidatorContext."]
    #[doc = " \\param ModuleCxt the WasmEdge_ASTModuleContext to validate."]
    #[doc = ""]
    #[doc = " \\returns WasmEdge_Result. Call `WasmEdge_ResultGetMessage` for the error"]
    #[doc = " message."]
    pub fn WasmEdge_ValidatorValidate(
        Cxt: *mut WasmEdge_ValidatorContext,
        ModuleCxt: *const WasmEdge_ASTModuleContext,
    ) -> WasmEdge_Result;
}
extern "C" {
    #[doc = " Deletion of the WasmEdge_ValidatorContext."]
    #[doc = ""]
    #[doc = " After calling this function, the context will be freed and should __NOT__ be"]
    #[doc = " used."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_ValidatorContext to delete."]
    pub fn WasmEdge_ValidatorDelete(Cxt: *mut WasmEdge_ValidatorContext);
}
extern "C" {
    #[doc = " Creation of the WasmEdge_InterpreterContext."]
    #[doc = ""]
    #[doc = " The caller owns the object and should call `WasmEdge_InterpreterDelete` to"]
    #[doc = " free it."]
    #[doc = ""]
    #[doc = " \\param ConfCxt the WasmEdge_ConfigureContext as the configuration of"]
    #[doc = " Interpreter. NULL for the default configuration."]
    #[doc = " \\param StatCxt the WasmEdge_StatisticsContext as the statistics object set"]
    #[doc = " into Interpreter. The statistics will refer to this context, and the life"]
    #[doc = " cycle should be ensured until the interpreter context is deleted. NULL for"]
    #[doc = " not doing the statistics."]
    #[doc = ""]
    #[doc = " \\returns pointer to context, NULL if failed."]
    pub fn WasmEdge_InterpreterCreate(
        ConfCxt: *const WasmEdge_ConfigureContext,
        StatCxt: *mut WasmEdge_StatisticsContext,
    ) -> *mut WasmEdge_InterpreterContext;
}
